<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".Home.HomeActivity">


<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/nameBank"
        android:textColor="@color/textPrimaryDark"
        android:textSize="26sp"
        android:textStyle="bold" />

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/login_title"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:gravity="center"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="20dp"

    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:id="@+id/layoutparent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/account_services"
        android:id="@+id/btnAccountServices"
        android:layout_margin="20dp"
        android:textColor="#fff"
        android:drawableLeft="@drawable/ic_account_service"
        android:background="@drawable/shape_button" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/btngenerateQrCode"
        android:layout_below="@+id/btnAccountServices"
        android:text="@string/generate_qr"
        android:layout_margin="20dp"
        android:textColor="#fff"
        android:drawableLeft="@drawable/ic_generate_qc"
        android:background="@drawable/shape_button" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/payement_service"
        android:id="@+id/btnBuyservice"
        android:layout_below="@+id/btngenerateQrCode"
        android:layout_margin="20dp"
        android:textColor="#fff"
        android:drawableLeft="@drawable/ic_credit_card"
        android:background="@drawable/shape_button" />




</RelativeLayout>




</LinearLayout>
